add css solution 3

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,16 @@
 /* Add CSS Styling */
+
+button {
+    font-family: Helvetica, 'Times New Roman', sans-serif;
+    font-size: 36px;
+    border: 2px solid gray;
+    padding: 4px 8px;
+}
+.left {
+    background-color: black;
+    color: white;
+}
+.right {
+    background-color: yellow;
+    color: black;
+}
