--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -6,22 +6,33 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: 40px;
+  padding: 20px;
+}
+
+.title,
+.content,
+.button-container {
+  background-color: #e3f4ff;
+  padding: 8px;
+  margin: 8px;
 }
 
 .title {
-  background: #e3f4ff;
+  font-size: 16px;
 }
 
 .content {
-  background: #e3f4ff;
 }
 
 .button-container {
-  background: #e3f4ff;
+  text-align: center;
 }
 
 button {
+  display: block;
   background: white;
+  margin: 0px auto;
   border: 1px solid #eee;
+  padding: 6px 16px;
 }
